[package]
name = "lau-ffi-bindings"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-ffi-bindings"
description = "Cross-language FFI infrastructure — safe calling between Rust, C, WebAssembly, and other languages"

[dependencies]
serde = { version = "1", features = ["derive"] }
nalgebra = "0.33"

[dev-dependencies]
serde_json = "1"
